--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express-validator": "^6.6.1",
     "handlebars-helpers": "^0.10.0",
     "knex": "^0.21.5",
+    "multer": "^1.4.2",
     "mysql2": "^2.1.0",
     "nodemon": "^2.0.4",
     "passport": "^0.4.1",
