Likes and comments tables
Structure for likes and comment functionalities. Updated gitignore to include folder structure necessary for image uploading

--- a/.gitignore
+++ b/.gitignore
@@ -103,5 +103,8 @@ dist
 # TernJS port file
 .tern-port
 
-# Storage
-storage
+# ignore files in folder images
+images/*
+
+# but keep the folder
+!images/.keep
